# ips-bout

./: .gitignore  .gitmodules  README.md  cmake-build-hermes.sh  pyproject.toml  requirements.txt
example/: ipsbout.config  ipshermes.config  lsn.geqdsk  platform.conf  run.sh
ipsbout/: __init__.py  bout_worker.py  hermes_transport_driver.py  hermes_transport_worker.py
ipshermes/: __init__.py  hypnotoad_worker.py  transport_driver.py
