[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm[toml] >= 6.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "IPS-Hermes"
description = "IPS components/drivers for Hermes-3"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Physics"
]
dependencies = [
    "ipsframework",
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]
docs = [
    "sphinx >= 5.3",
    "sphinx_autodoc_typehints >= 1.19",
    "sphinx-book-theme >= 0.4.0rc1",
]

[tool.setuptools]
packages = ["ipshermes"]

[tool.setuptools.dynamic]
version = { attr = "setuptools_scm.get_version" }

[tool.setuptools_scm]
write_to = "ipshermes/_version.py"
